--- a/OLS.Rmd
+++ b/OLS.Rmd
@@ -14,7 +14,7 @@ df <- read.csv("data/female_labor.csv")
 head(df)
 ```
 
-
+*データをみる際には、データの1行が何を示しているのか？（: 手元のデータは何を観察したものなのか？）を把握することが重要です！*今回のデータの1行は、労働者の情報を表しています。具体的には、データ1行目は、労働時間が4950時間で、年齢は35才の人で、時給は0.1616ドル...な労働者の情報というような感じです。
 
 ○変数の説明
 
